# NovaMesh-Backend

./: .eslintrc.json  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: nodejs.yml  rust.yml
prisma/: schema.prisma
rust-backend/: .gitignore  Cargo.toml  Dockerfile  README.md
rust-backend/src/: main.rs  routes.rs  stellar.rs
src/: app.ts  config.ts  index.ts
src/controllers/: agentController.ts  authController.ts  paymentController.ts
src/graphql/: schema.ts  server.ts
src/middleware/: errorHandler.ts
src/routes/: agents.ts  auth.ts  payments.ts
src/services/: logger.ts  monitoring.ts  redis.ts
